--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
+    "chai": "^5.1.1",
+    "cross-env": "^7.0.3",
+    "mocha": "^10.7.3",
     "nodemon": "^3.1.0"
   }
 }
